syntax = "proto3";

option csharp_namespace = "Ecommerce";

import "google/type/money.proto";
import "google/protobuf/empty.proto";

service ProductService 
{
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
  rpc GetProducts (google.protobuf.Empty) returns (GetProductsResponse);
  rpc CreateProduct (CreateProductRequest) returns (OperationStatusResponse);
  rpc UpdateProduct (UpdateProductRequest) returns (OperationStatusResponse);
  rpc DeleteProduct (DeleteProductRequest) returns (OperationStatusResponse);
}

message GetProductRequest 
{
  int32 id = 1;
}

message CreateProductRequest 
{
  ProductInfo product = 1;
}

message UpdateProductRequest 
{
  int32 id = 1;
  ProductInfo product = 2;
}

message DeleteProductRequest 
{
  int32 id = 1;
}

message GetProductResponse 
{
  Status status = 1;
  oneof result 
  {
    ProductFound found = 2;
    ProductNotFound not_found = 3;
  }

  message ProductFound 
  {
    ProductInfo product = 1;
  }

  message ProductNotFound 
  {
    string message = 1;
  }
}

message GetProductsResponse 
{
    Status status = 1;
    repeated ProductInfo products = 2;
}

message OperationStatusResponse 
{
  Status status = 1;
  string message = 2;
}

message ProductInfo 
{
  string name = 1;
  string description = 2;
  google.type.Money price = 3;
  int32 stock = 4;
}

enum Status 
{
    SUCCESS = 0;
    FAILURE = 1;
}